dev: forzar inclusion main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,8 @@
      "output_type": "stream",
      "text": [
       "Parametros construidos\n",
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-03-17\n",
       "Set parameter TimeLimit to value 1800\n",
       "Variables de decisión instanciadas\n",
       "R1 agregada\n",
@@ -32,12 +34,12 @@
      "evalue": "(1, 0, 1, 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 440\u001b[0m\n\u001b[0;32m    427\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    428\u001b[0m     (\n\u001b[0;32m    429\u001b[0m         M[b, t, o]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    435\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR13\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    436\u001b[0m )\n\u001b[0;32m    437\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mR13 agregada\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 440\u001b[0m model\u001b[39m.\u001b[39;49maddConstrs(\n\u001b[0;32m    441\u001b[0m     (\n\u001b[0;32m    442\u001b[0m         bigM \u001b[39m*\u001b[39;49m Y[i, b \u001b[39m-\u001b[39;49m Bo[i, o], t, o] \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m W[i, b, t, o]\n\u001b[0;32m    443\u001b[0m         \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m Camiones\n\u001b[0;32m    444\u001b[0m         \u001b[39mfor\u001b[39;49;00m o \u001b[39min\u001b[39;49;00m Origenes\n\u001b[0;32m    445\u001b[0m         \u001b[39mfor\u001b[39;49;00m t \u001b[39min\u001b[39;49;00m Dias\n\u001b[0;32m    446\u001b[0m         \u001b[39mfor\u001b[39;49;00m b \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(Bo[i, o], \u001b[39m48\u001b[39;49m)\n\u001b[0;32m    447\u001b[0m         \n\u001b[0;32m    448\u001b[0m     ),\n\u001b[0;32m    449\u001b[0m     name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mR14a\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    450\u001b[0m )\n\u001b[0;32m    452\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    453\u001b[0m     (\n\u001b[0;32m    454\u001b[0m         Y[i, b \u001b[39m-\u001b[39m Bo[i, o], t, o] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    460\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14b\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    461\u001b[0m )\n\u001b[0;32m    463\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    464\u001b[0m     (\n\u001b[0;32m    465\u001b[0m         bigM \u001b[39m*\u001b[39m Z[i, b \u001b[39m-\u001b[39m Bd[i, d], t, d] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m X[i, b, t, d]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    471\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14c\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    472\u001b[0m )\n",
-      "File \u001b[1;32msrc\\gurobipy\\model.pxi:3755\u001b[0m, in \u001b[0;36mgurobipy.Model.addConstrs\u001b[1;34m()\u001b[0m\n",
-      "Cell \u001b[1;32mIn[8], line 442\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    427\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    428\u001b[0m     (\n\u001b[0;32m    429\u001b[0m         M[b, t, o]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    435\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR13\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    436\u001b[0m )\n\u001b[0;32m    437\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mR13 agregada\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    440\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    441\u001b[0m     (\n\u001b[1;32m--> 442\u001b[0m         bigM \u001b[39m*\u001b[39m Y[i, b \u001b[39m-\u001b[39;49m Bo[i, o], t, o] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[0;32m    443\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m Camiones\n\u001b[0;32m    444\u001b[0m         \u001b[39mfor\u001b[39;00m o \u001b[39min\u001b[39;00m Origenes\n\u001b[0;32m    445\u001b[0m         \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m Dias\n\u001b[0;32m    446\u001b[0m         \u001b[39mfor\u001b[39;00m b \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(Bo[i, o], \u001b[39m48\u001b[39m)\n\u001b[0;32m    447\u001b[0m         \n\u001b[0;32m    448\u001b[0m     ),\n\u001b[0;32m    449\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14a\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    450\u001b[0m )\n\u001b[0;32m    452\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    453\u001b[0m     (\n\u001b[0;32m    454\u001b[0m         Y[i, b \u001b[39m-\u001b[39m Bo[i, o], t, o] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    460\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14b\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    461\u001b[0m )\n\u001b[0;32m    463\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m    464\u001b[0m     (\n\u001b[0;32m    465\u001b[0m         bigM \u001b[39m*\u001b[39m Z[i, b \u001b[39m-\u001b[39m Bd[i, d], t, d] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m X[i, b, t, d]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    471\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14c\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    472\u001b[0m )\n",
-      "\u001b[1;31mKeyError\u001b[0m: (1, 0, 1, 1)"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 440\u001b[0m\n\u001b[1;32m    427\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    428\u001b[0m     (\n\u001b[1;32m    429\u001b[0m         M[b, t, o]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    435\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR13\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    436\u001b[0m )\n\u001b[1;32m    437\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mR13 agregada\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 440\u001b[0m model\u001b[39m.\u001b[39;49maddConstrs(\n\u001b[1;32m    441\u001b[0m     (\n\u001b[1;32m    442\u001b[0m         bigM \u001b[39m*\u001b[39;49m Y[i, b \u001b[39m-\u001b[39;49m Bo[i, o], t, o] \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m W[i, b, t, o]\n\u001b[1;32m    443\u001b[0m         \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m Camiones\n\u001b[1;32m    444\u001b[0m         \u001b[39mfor\u001b[39;49;00m o \u001b[39min\u001b[39;49;00m Origenes\n\u001b[1;32m    445\u001b[0m         \u001b[39mfor\u001b[39;49;00m t \u001b[39min\u001b[39;49;00m Dias\n\u001b[1;32m    446\u001b[0m         \u001b[39mfor\u001b[39;49;00m b \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(Bo[i, o], \u001b[39m48\u001b[39;49m)\n\u001b[1;32m    447\u001b[0m         \n\u001b[1;32m    448\u001b[0m     ),\n\u001b[1;32m    449\u001b[0m     name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mR14a\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m    450\u001b[0m )\n\u001b[1;32m    452\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    453\u001b[0m     (\n\u001b[1;32m    454\u001b[0m         Y[i, b \u001b[39m-\u001b[39m Bo[i, o], t, o] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    460\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14b\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    461\u001b[0m )\n\u001b[1;32m    463\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    464\u001b[0m     (\n\u001b[1;32m    465\u001b[0m         bigM \u001b[39m*\u001b[39m Z[i, b \u001b[39m-\u001b[39m Bd[i, d], t, d] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m X[i, b, t, d]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    471\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14c\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    472\u001b[0m )\n",
+      "File \u001b[0;32msrc/gurobipy/model.pxi:3755\u001b[0m, in \u001b[0;36mgurobipy.Model.addConstrs\u001b[0;34m()\u001b[0m\n",
+      "Cell \u001b[0;32mIn[1], line 442\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    427\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    428\u001b[0m     (\n\u001b[1;32m    429\u001b[0m         M[b, t, o]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    435\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR13\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    436\u001b[0m )\n\u001b[1;32m    437\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mR13 agregada\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    440\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    441\u001b[0m     (\n\u001b[0;32m--> 442\u001b[0m         bigM \u001b[39m*\u001b[39m Y[i, b \u001b[39m-\u001b[39;49m Bo[i, o], t, o] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[1;32m    443\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m Camiones\n\u001b[1;32m    444\u001b[0m         \u001b[39mfor\u001b[39;00m o \u001b[39min\u001b[39;00m Origenes\n\u001b[1;32m    445\u001b[0m         \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m Dias\n\u001b[1;32m    446\u001b[0m         \u001b[39mfor\u001b[39;00m b \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(Bo[i, o], \u001b[39m48\u001b[39m)\n\u001b[1;32m    447\u001b[0m         \n\u001b[1;32m    448\u001b[0m     ),\n\u001b[1;32m    449\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14a\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    450\u001b[0m )\n\u001b[1;32m    452\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    453\u001b[0m     (\n\u001b[1;32m    454\u001b[0m         Y[i, b \u001b[39m-\u001b[39m Bo[i, o], t, o] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m W[i, b, t, o]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    460\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14b\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    461\u001b[0m )\n\u001b[1;32m    463\u001b[0m model\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m    464\u001b[0m     (\n\u001b[1;32m    465\u001b[0m         bigM \u001b[39m*\u001b[39m Z[i, b \u001b[39m-\u001b[39m Bd[i, d], t, d] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m X[i, b, t, d]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    471\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mR14c\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    472\u001b[0m )\n",
+      "\u001b[0;31mKeyError\u001b[0m: (1, 0, 1, 1)"
      ]
     }
    ],
@@ -483,45 +485,44 @@
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        bigM * Y[i, b - Bo[i, o], t, o] >= W[i, b, t, o]\n",
+    "        bigM * Y[i, b, t, o] >= W[i, b + Bo[i, o], t, o]\n",
     "        for i in Camiones\n",
     "        for o in Origenes\n",
     "        for t in Dias\n",
-    "        for b in range(Bo[i, o], 48)\n",
-    "        \n",
+    "        for b in range(1, 48 - Bo[i, o])\n",
     "    ),\n",
     "    name=\"R14a\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        Y[i, b - Bo[i, o], t, o] <= W[i, b, t, o]\n",
+    "        Y[i, b, t, o] <= W[i, b + Bo[i, o], t, o]\n",
     "        for i in Camiones\n",
     "        for o in Origenes\n",
     "        for t in Dias\n",
-    "        for b in range(Bo[i, o], 48)\n",
+    "        for b in range(1, 48 - Bo[i, o])\n",
     "    ),\n",
     "    name=\"R14b\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        bigM * Z[i, b - Bd[i, d], t, d] >= X[i, b, t, d]\n",
+    "        bigM * Z[i, b, t, d] >= X[i, b + Bo[i, o], t, d]\n",
     "        for i in Camiones\n",
     "        for d in Destinos\n",
     "        for t in Dias\n",
-    "        for b in range(Bd[i, d], 48)\n",
+    "        for b in range(1, 48 - Bo[i, o])\n",
     "    ),\n",
     "    name=\"R14c\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        Z[i, b - Bd[i, d], t, d] <= X[i, b, t, d]\n",
+    "        Z[i, b, t, d] <= X[i, b + Bo[i, o], t, d]\n",
     "        for i in Camiones\n",
     "        for d in Destinos\n",
     "        for t in Dias\n",
-    "        for b in range(Bd[i, d], 48)\n",
+    "        for b in range(1, 48 - Bo[i, o])\n",
     "    ),\n",
     "    name=\"R14d\",\n",
     ")\n",
@@ -1063,7 +1064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
