--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,6 @@
      "output_type": "stream",
      "text": [
       "Parametros construidos\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-03-17\n",
       "Set parameter TimeLimit to value 1800\n",
       "Variables de decisión instanciadas\n",
       "R1 agregada\n",
@@ -30,80 +28,47 @@
       "R16 agregada\n",
       "R17 agregada\n",
       "R18 agregada\n",
+      "R20 agregada\n",
       "Optimizando...\n",
       "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
       "\n",
       "CPU model: AMD Ryzen 5 2500U with Radeon Vega Mobile Gfx, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 1684990 rows, 160336 columns and 3928023 nonzeros\n",
-      "Model fingerprint: 0xc2051842\n",
+      "Optimize a model with 1747310 rows, 160336 columns and 4052663 nonzeros\n",
+      "Model fingerprint: 0x34acb115\n",
       "Variable types: 0 continuous, 160336 integer (80656 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+06]\n",
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 1599267 rows and 123956 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1606584 rows and 124874 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1613679 rows and 125186 columns (presolve time = 15s) ...\n",
-      "Presolve removed 1613679 rows and 125186 columns (presolve time = 20s) ...\n",
-      "Presolve removed 1613679 rows and 125186 columns (presolve time = 25s) ...\n",
-      "Presolve removed 1613769 rows and 125226 columns (presolve time = 30s) ...\n",
-      "Presolve removed 1613769 rows and 125226 columns\n",
-      "Presolve time: 33.91s\n",
-      "Presolved: 71221 rows, 35110 columns, 272596 nonzeros\n",
-      "Variable types: 0 continuous, 35110 integer (14088 binary)\n",
-      "Found heuristic solution: objective 0.1098160\n",
+      "Presolve removed 280744 rows and 125277 columns\n",
+      "Presolve time: 1.71s\n",
       "\n",
-      "Deterministic concurrent LP optimizer: primal and dual simplex (primal and dual model)\n",
-      "Showing first log only...\n",
+      "Explored 0 nodes (0 simplex iterations) in 3.48 seconds (1.16 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
       "\n",
-      "Root relaxation presolved: 45305 rows, 22538 columns, 214554 nonzeros\n",
+      "Solution count 0\n",
       "\n",
+      "Model is infeasible\n",
+      "Best objective -, best bound -, gap -\n",
       "\n",
-      "Root simplex log...\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    0.0000000e+00   2.648125e+03   6.000437e+09     38s\n",
-      "    3490    0.0000000e+00   0.000000e+00   0.000000e+00     38s\n",
-      "    3490    0.0000000e+00   0.000000e+00   0.000000e+00     38s\n",
-      "Concurrent spin time: 0.04s\n",
-      "\n",
-      "Solved with primal simplex (primal model)\n",
-      "\n",
-      "Root relaxation: objective 0.000000e+00, 3490 iterations, 1.23 seconds (0.23 work units)\n",
-      "\n",
-      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
-      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
-      "\n",
-      "     0     0    0.00000    0    6    0.10982    0.00000   100%     -   38s\n",
-      "H    0     0                       0.0000000    0.00000  0.00%     -   38s\n",
-      "     0     0    0.00000    0    6    0.00000    0.00000  0.00%     -   38s\n",
-      "\n",
-      "Explored 1 nodes (3490 simplex iterations) in 38.44 seconds (14.85 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
-      "\n",
-      "Solution count 2: 0 0.109816 \n",
-      "\n",
-      "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
-      "0 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 0 es 46465.31741\n",
-      "1 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 1 es 46465.31741\n",
-      "\n",
-      "---------- Manejo Soluciones ----------\n",
-      "El valor objetivo es de: 0.0\n",
-      "Se compra el camión 1 de tipo diesel\n",
-      "Se compra el camión 2 de tipo diesel\n",
-      "Se compra el camión 3 de tipo diesel\n",
-      "Se compra el camión 4 de tipo diesel\n",
-      "Se compra el camión 6 de tipo diesel\n",
-      "Se compra el camión 8 de tipo diesel\n",
-      "Se compra el camión 9 de tipo eléctrico\n",
-      "Se compra el camión 10 de tipo eléctrico\n",
-      "Se compra el camión 16 de tipo eléctrico\n"
+      "---------- Manejo Soluciones ----------\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "Unable to retrieve attribute 'ObjVal'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 626\u001b[0m\n\u001b[1;32m    623\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLa holgura presupuestaria de la solución \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m es \u001b[39m\u001b[39m{\u001b[39;00mc0\u001b[39m.\u001b[39mgetAttr(\u001b[39m\"\u001b[39m\u001b[39mslack\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m    625\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m*\u001b[39m \u001b[39m10\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m Manejo Soluciones \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m*\u001b[39m \u001b[39m10\u001b[39m)\n\u001b[0;32m--> 626\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEl valor objetivo es de: \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m.\u001b[39mObjVal\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    627\u001b[0m \u001b[39mfor\u001b[39;00m camion \u001b[39min\u001b[39;00m Camiones:\n\u001b[1;32m    628\u001b[0m     \u001b[39mif\u001b[39;00m beta[camion]\u001b[39m.\u001b[39mx \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "File \u001b[0;32msrc/gurobipy/model.pxi:354\u001b[0m, in \u001b[0;36mgurobipy.Model.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32msrc/gurobipy/model.pxi:1914\u001b[0m, in \u001b[0;36mgurobipy.Model.getAttr\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32msrc/gurobipy/attrutil.pxi:100\u001b[0m, in \u001b[0;36mgurobipy.__getattr\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: Unable to retrieve attribute 'ObjVal'"
      ]
     }
    ],
@@ -681,6 +646,29 @@
     "# )\n",
     "\n",
     "# print(\"R19 agregada\")\n",
+    "\n",
+    "model.addConstrs(\n",
+    "    (\n",
+    "        X[i, b, t, d] <= bigM * Z[i, b - Bd[i, d], t, d]\n",
+    "            for i in Camiones\n",
+    "            for t in Dias\n",
+    "            for d in Destinos\n",
+    "            for b in Bloques[Bd[i, d] + 1 :]\n",
+    "    ),\n",
+    "    name='R20a'\n",
+    ")\n",
+    "\n",
+    "model.addConstrs(\n",
+    "    (\n",
+    "        X[i, b, t, o] <= bigM * Z[i, b - Bo[i, o], t, o]\n",
+    "            for i in Camiones\n",
+    "            for t in Dias\n",
+    "            for o in Origenes\n",
+    "            for b in Bloques[Bo[i, o] + 1 :]\n",
+    "    ),\n",
+    "    name='R20b'\n",
+    ")\n",
+    "print(\"R20 agregada\")\n",
     "\n",
     "\n",
     "# ------------ Función objetivo ------------\n",
