--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,56 +36,81 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 1747310 rows, 160336 columns and 4052663 nonzeros\n",
-      "Model fingerprint: 0xe1deaf5e\n",
+      "Model fingerprint: 0x021e811a\n",
       "Variable types: 0 continuous, 160336 integer (80656 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [6e-03, 1e+05]\n",
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 1269314 rows and 90151 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1309209 rows and 90508 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1353363 rows and 90508 columns (presolve time = 15s) ...\n",
-      "Presolve removed 1387550 rows and 90572 columns (presolve time = 20s) ...\n",
-      "Presolve removed 1393282 rows and 91037 columns (presolve time = 25s) ...\n",
-      "Presolve removed 1402761 rows and 91037 columns (presolve time = 30s) ...\n",
-      "Presolve removed 1402819 rows and 91037 columns (presolve time = 35s) ...\n",
-      "Presolve removed 1402819 rows and 91037 columns\n",
-      "Presolve time: 35.62s\n",
-      "Presolved: 344491 rows, 69299 columns, 1001585 nonzeros\n",
-      "Variable types: 0 continuous, 69299 integer (30751 binary)\n",
+      "Presolve removed 1643487 rows and 124550 columns (presolve time = 5s) ...\n",
+      "Presolve removed 1646290 rows and 125225 columns (presolve time = 10s) ...\n",
+      "Presolve removed 1652306 rows and 125326 columns (presolve time = 15s) ...\n",
+      "Presolve removed 1652306 rows and 125326 columns\n",
+      "Presolve time: 16.24s\n",
+      "Presolved: 95004 rows, 35010 columns, 330948 nonzeros\n",
+      "Variable types: 0 continuous, 35010 integer (13094 binary)\n",
       "\n",
-      "Deterministic concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
-      "Showing barrier log only...\n",
+      "Deterministic concurrent LP optimizer: primal and dual simplex (primal and dual model)\n",
+      "Showing first log only...\n",
       "\n",
-      "Root barrier log...\n",
       "\n",
-      "Elapsed ordering time = 5s\n",
-      "Elapsed ordering time = 10s\n",
-      "Elapsed ordering time = 16s\n",
-      "Elapsed ordering time = 20s\n",
-      "Elapsed ordering time = 23s\n",
-      "Elapsed ordering time = 24s\n",
-      "Elapsed ordering time = 24s\n",
-      "Ordering time: 24.41s\n",
+      "Root simplex log...\n",
       "\n",
-      "Barrier performed 0 iterations in 77.70 seconds (25.41 work units)\n",
-      "Barrier solve interrupted - model solved by another algorithm\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0   -0.0000000e+00   0.000000e+00   3.970958e+05     22s\n",
+      "Concurrent spin time: 0.01s\n",
       "\n",
-      "Concurrent spin time: 15.52s (can be avoided by choosing Method=3)\n",
+      "Solved with dual simplex (dual model)\n",
       "\n",
-      "Solved with primal simplex\n",
-      "\n",
-      "Root relaxation: objective 0.000000e+00, 21398 iterations, 33.57 seconds (4.20 work units)\n",
-      "Total elapsed time = 119.09s\n",
+      "Root relaxation: objective 0.000000e+00, 4920 iterations, 2.36 seconds (0.77 work units)\n",
+      "Total elapsed time = 32.96s\n",
+      "Total elapsed time = 38.25s\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "H    0     0                       0.0000000    0.00000  0.00%     -  119s\n",
-      "     0     0    0.00000    0   41    0.00000    0.00000  0.00%     -  119s\n",
+      "     0     0    0.00000    0  194          -    0.00000      -     -   40s\n",
+      "     0     0    0.00000    0  303          -    0.00000      -     -   44s\n",
+      "     0     0    0.00000    0 1405          -    0.00000      -     -   71s\n",
+      "     0     0    0.00000    0 1090          -    0.00000      -     -   77s\n",
+      "     0     0    0.00000    0  161          -    0.00000      -     -   96s\n",
+      "     0     0    0.00000    0  103          -    0.00000      -     -   97s\n",
+      "     0     0    0.00000    0  116          -    0.00000      -     -  119s\n",
+      "     0     0    0.00000    0  418          -    0.00000      -     -  125s\n",
+      "     0     0    0.00000    0   98          -    0.00000      -     -  148s\n",
+      "     0     0    0.00000    0  366          -    0.00000      -     -  158s\n",
+      "     0     0    0.00000    0  133          -    0.00000      -     -  181s\n",
+      "     0     0    0.00000    0  323          -    0.00000      -     -  186s\n",
+      "     0     0    0.00000    0  130          -    0.00000      -     -  203s\n",
+      "     0     0    0.00000    0  284          -    0.00000      -     -  205s\n",
+      "     0     0    0.00000    0   85          -    0.00000      -     -  226s\n",
+      "     0     0    0.00000    0  139          -    0.00000      -     -  228s\n",
+      "     0     0    0.00000    0   54          -    0.00000      -     -  237s\n",
+      "     0     0    0.00000    0  284          -    0.00000      -     -  238s\n",
+      "     0     0    0.00000    0   74          -    0.00000      -     -  244s\n",
+      "     0     0    0.00000    0  328          -    0.00000      -     -  249s\n",
+      "     0     0    0.00000    0   39          -    0.00000      -     -  266s\n",
+      "H    0     0                       0.0000000    0.00000  0.00%     -  266s\n",
+      "     0     0    0.00000    0   39    0.00000    0.00000  0.00%     -  266s\n",
       "\n",
-      "Explored 1 nodes (51328 simplex iterations) in 119.59 seconds (35.36 work units)\n",
+      "Cutting planes:\n",
+      "  Learned: 70\n",
+      "  Lift-and-project: 1\n",
+      "  Cover: 25\n",
+      "  Implied bound: 74\n",
+      "  Clique: 6\n",
+      "  MIR: 39\n",
+      "  StrongCG: 7\n",
+      "  Flow cover: 10\n",
+      "  GUB cover: 16\n",
+      "  Zero half: 10\n",
+      "  Network: 2\n",
+      "  RLT: 18\n",
+      "  Relax-and-lift: 35\n",
+      "  BQP: 31\n",
+      "\n",
+      "Explored 1 nodes (238776 simplex iterations) in 266.95 seconds (149.56 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 0 \n",
@@ -93,26 +118,14 @@
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
       "0 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 0 es 5636.206629999986\n",
+      "La holgura presupuestaria de la solución 0 es 3.1142959999999675\n",
       "\n",
       "---------- Manejo Soluciones ----------\n",
       "El valor objetivo es de: 0.0\n",
       "Se compra el camión 1 de tipo diesel\n",
-      "Se compra el camión 2 de tipo diesel\n",
-      "Se compra el camión 3 de tipo diesel\n",
-      "Se compra el camión 4 de tipo diesel\n",
       "Se compra el camión 5 de tipo diesel\n",
-      "Se compra el camión 6 de tipo diesel\n",
-      "Se compra el camión 7 de tipo diesel\n",
-      "Se compra el camión 8 de tipo diesel\n",
       "Se compra el camión 9 de tipo eléctrico\n",
-      "Se compra el camión 10 de tipo eléctrico\n",
-      "Se compra el camión 11 de tipo eléctrico\n",
-      "Se compra el camión 12 de tipo eléctrico\n",
-      "Se compra el camión 13 de tipo eléctrico\n",
-      "Se compra el camión 14 de tipo eléctrico\n",
-      "Se compra el camión 15 de tipo eléctrico\n",
-      "Se compra el camión 16 de tipo eléctrico\n"
+      "Se compra el camión 12 de tipo eléctrico\n"
      ]
     }
    ],
@@ -165,7 +178,7 @@
     "Cq = 20000\n",
     "Qmax = 500\n",
     "Ce = 5000\n",
-    "G = 47600  #Ajustar números\n",
+    "G = 300  #Ajustar números\n",
     "\n",
     "\n",
     "# Construcción de los parámetros\n",
@@ -756,75 +769,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y_ibto[9,6,4,1] 1.0\n",
-      "Y_ibto[9,12,4,4] 1.0\n",
-      "Y_ibto[9,37,3,4] 1.0\n",
-      "Y_ibto[9,40,1,4] 1.0\n",
-      "Y_ibto[9,40,2,1] 1.0\n",
-      "Y_ibto[10,18,3,1] 1.0\n",
-      "Y_ibto[10,37,5,1] 1.0\n",
-      "Y_ibto[10,40,5,1] 1.0\n",
-      "Y_ibto[10,43,2,1] 1.0\n",
-      "Y_ibto[11,13,4,1] 1.0\n",
-      "Y_ibto[11,18,4,4] 1.0\n",
-      "Y_ibto[11,19,4,1] 1.0\n",
-      "Y_ibto[11,21,3,4] 1.0\n",
-      "Y_ibto[11,38,5,4] 1.0\n",
-      "Y_ibto[12,16,4,1] 1.0\n",
-      "Y_ibto[12,25,4,1] 1.0\n",
-      "Y_ibto[12,36,3,1] 1.0\n",
-      "Y_ibto[12,37,1,1] 1.0\n",
-      "Y_ibto[12,39,3,1] 1.0\n",
+      "Y_ibto[9,1,3,1] 1.0\n",
+      "Y_ibto[9,1,4,1] 1.0\n",
+      "Y_ibto[9,1,5,1] 1.0\n",
+      "Y_ibto[9,16,1,1] 1.0\n",
+      "Y_ibto[9,21,5,1] 1.0\n",
+      "Y_ibto[9,26,2,1] 1.0\n",
+      "Y_ibto[9,26,4,1] 1.0\n",
+      "Y_ibto[9,30,2,4] 1.0\n",
+      "Y_ibto[9,31,2,1] 1.0\n",
+      "Y_ibto[9,33,4,1] 1.0\n",
+      "Y_ibto[9,39,2,1] 1.0\n",
+      "Y_ibto[9,39,5,1] 1.0\n",
+      "Y_ibto[9,40,4,1] 1.0\n",
+      "Y_ibto[9,44,4,1] 1.0\n",
+      "Y_ibto[12,5,4,4] 1.0\n",
+      "Y_ibto[12,6,1,1] 1.0\n",
+      "Y_ibto[12,6,3,1] 1.0\n",
+      "Y_ibto[12,6,4,1] 1.0\n",
+      "Y_ibto[12,7,2,8] 1.0\n",
+      "Y_ibto[12,8,2,4] 1.0\n",
+      "Y_ibto[12,9,3,1] 1.0\n",
+      "Y_ibto[12,9,5,1] 1.0\n",
+      "Y_ibto[12,10,1,1] 1.0\n",
+      "Y_ibto[12,12,3,1] 1.0\n",
+      "Y_ibto[12,12,4,4] 1.0\n",
+      "Y_ibto[12,13,4,1] 1.0\n",
+      "Y_ibto[12,13,5,1] 1.0\n",
+      "Y_ibto[12,15,1,1] 1.0\n",
+      "Y_ibto[12,15,3,1] 1.0\n",
+      "Y_ibto[12,16,5,1] 1.0\n",
+      "Y_ibto[12,19,1,1] 1.0\n",
+      "Y_ibto[12,19,4,4] 1.0\n",
+      "Y_ibto[12,20,3,1] 1.0\n",
+      "Y_ibto[12,20,4,1] 1.0\n",
+      "Y_ibto[12,23,3,1] 1.0\n",
+      "Y_ibto[12,23,5,1] 1.0\n",
+      "Y_ibto[12,25,1,1] 1.0\n",
+      "Y_ibto[12,26,3,1] 1.0\n",
+      "Y_ibto[12,26,5,1] 1.0\n",
+      "Y_ibto[12,28,1,1] 1.0\n",
+      "Y_ibto[12,29,3,1] 1.0\n",
+      "Y_ibto[12,29,4,1] 1.0\n",
+      "Y_ibto[12,30,5,1] 1.0\n",
+      "Y_ibto[12,32,1,4] 1.0\n",
+      "Y_ibto[12,33,1,1] 1.0\n",
+      "Y_ibto[12,34,3,1] 1.0\n",
+      "Y_ibto[12,36,5,1] 1.0\n",
+      "Y_ibto[12,37,3,1] 1.0\n",
+      "Y_ibto[12,39,4,1] 1.0\n",
+      "Y_ibto[12,40,3,1] 1.0\n",
+      "Y_ibto[12,42,1,1] 1.0\n",
       "Y_ibto[12,42,2,1] 1.0\n",
-      "Y_ibto[12,42,4,1] 1.0\n",
-      "Y_ibto[12,43,5,1] 1.0\n",
-      "Y_ibto[13,42,3,1] 1.0\n",
-      "Y_ibto[14,12,1,1] 1.0\n",
-      "Y_ibto[14,15,4,1] 1.0\n",
-      "Y_ibto[14,16,1,1] 1.0\n",
-      "Y_ibto[14,39,1,1] 1.0\n",
-      "Y_ibto[14,44,2,1] 1.0\n",
-      "Y_ibto[15,23,4,1] 1.0\n",
-      "Y_ibto[15,33,3,1] 1.0\n",
-      "Y_ibto[15,40,3,1] 1.0\n",
-      "Y_ibto[15,42,5,1] 1.0\n",
-      "Y_ibto[16,14,3,8] 1.0\n",
-      "Y_ibto[16,22,1,4] 1.0\n",
-      "Y_ibto[16,31,3,1] 1.0\n",
-      "Y_ibto[16,37,4,4] 1.0\n",
-      "Y_ibto[16,43,1,1] 1.0\n",
-      "Y_ibto[16,44,3,1] 1.0\n",
-      "Z_ibtd[9,38,3,9] 1.0\n",
-      "Z_ibtd[9,41,1,3] 1.0\n",
-      "Z_ibtd[10,25,4,3] 1.0\n",
-      "Z_ibtd[10,42,2,9] 1.0\n",
-      "Z_ibtd[10,44,4,3] 1.0\n",
-      "Z_ibtd[10,44,5,3] 1.0\n",
-      "Z_ibtd[10,45,5,7] 1.0\n",
-      "Z_ibtd[10,46,1,7] 1.0\n",
-      "Z_ibtd[11,20,3,3] 1.0\n",
-      "Z_ibtd[11,39,5,3] 1.0\n",
-      "Z_ibtd[11,44,2,3] 1.0\n",
-      "Z_ibtd[12,46,3,7] 1.0\n",
-      "Z_ibtd[13,27,4,7] 1.0\n",
-      "Z_ibtd[13,39,1,9] 1.0\n",
-      "Z_ibtd[13,43,4,9] 1.0\n",
-      "Z_ibtd[13,44,5,9] 1.0\n",
-      "Z_ibtd[14,33,3,9] 1.0\n",
-      "Z_ibtd[14,43,3,9] 1.0\n",
-      "Z_ibtd[14,44,3,9] 1.0\n",
-      "Z_ibtd[16,14,1,3] 1.0\n",
-      "Z_ibtd[16,25,4,3] 1.0\n",
-      "Z_ibtd[16,35,3,9] 1.0\n",
-      "Z_ibtd[16,44,4,3] 1.0\n",
-      "Z_ibtd[16,46,2,7] 1.0\n"
+      "Y_ibto[12,43,4,1] 1.0\n",
+      "Z_ibtd[9,11,5,3] 1.0\n",
+      "Z_ibtd[9,25,4,3] 1.0\n",
+      "Z_ibtd[9,27,1,9] 1.0\n",
+      "Z_ibtd[9,31,3,3] 1.0\n",
+      "Z_ibtd[9,36,3,7] 1.0\n",
+      "Z_ibtd[9,38,5,9] 1.0\n",
+      "Z_ibtd[9,39,3,9] 1.0\n",
+      "Z_ibtd[9,44,1,7] 1.0\n",
+      "Z_ibtd[9,44,2,3] 1.0\n",
+      "Z_ibtd[12,18,1,3] 1.0\n",
+      "Z_ibtd[12,28,2,9] 1.0\n",
+      "Z_ibtd[12,28,4,9] 1.0\n",
+      "Z_ibtd[12,33,2,7] 1.0\n",
+      "Z_ibtd[12,36,2,3] 1.0\n",
+      "Z_ibtd[12,41,2,9] 1.0\n",
+      "Z_ibtd[12,41,5,7] 1.0\n",
+      "Z_ibtd[12,46,4,7] 1.0\n"
      ]
     }
    ],
