intento fallido de regular camiones con restricciones juanpa

--- a/main_22jun_juanpa.ipynb
+++ b/main_22jun_juanpa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30,9 +30,9 @@
       "R17 agregada\n",
       "R18 agregada\n",
       "Optimizando...\n",
-      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
+      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (win64)\n",
       "\n",
-      "CPU model: AMD Ryzen 5 2500U with Radeon Vega Mobile Gfx, instruction set [SSE2|AVX|AVX2]\n",
+      "CPU model: Intel(R) Core(TM) i5-8250U CPU @ 1.60GHz, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 1797470 rows, 160336 columns and 4138983 nonzeros\n",
@@ -43,16 +43,11 @@
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 1728862 rows and 131188 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1742851 rows and 131972 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1743931 rows and 132521 columns (presolve time = 15s) ...\n",
-      "Presolve removed 1744795 rows and 132908 columns (presolve time = 20s) ...\n",
-      "Presolve removed 1749878 rows and 133213 columns (presolve time = 25s) ...\n",
-      "Presolve removed 1749878 rows and 133213 columns (presolve time = 30s) ...\n",
-      "Presolve removed 1749878 rows and 133213 columns (presolve time = 35s) ...\n",
-      "Presolve removed 1750140 rows and 133330 columns (presolve time = 40s) ...\n",
+      "Presolve removed 1743384 rows and 132357 columns (presolve time = 5s) ...\n",
+      "Presolve removed 1745009 rows and 133038 columns (presolve time = 10s) ...\n",
+      "Presolve removed 1749878 rows and 133213 columns (presolve time = 15s) ...\n",
       "Presolve removed 1750139 rows and 133329 columns\n",
-      "Presolve time: 41.32s\n",
+      "Presolve time: 18.95s\n",
       "Presolved: 47331 rows, 27007 columns, 171655 nonzeros\n",
       "Variable types: 0 continuous, 27007 integer (10071 binary)\n",
       "Found heuristic solution: objective 0.1098160\n",
@@ -63,39 +58,39 @@
       "Root simplex log...\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    0.0000000e+00   1.755922e+03   1.153987e+09     45s\n",
-      "      95    0.0000000e+00   0.000000e+00   0.000000e+00     45s\n",
-      "Concurrent spin time: 0.01s\n",
+      "       0    0.0000000e+00   1.755922e+03   1.153987e+09     21s\n",
+      "      95    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
+      "Concurrent spin time: 0.00s\n",
       "\n",
       "Solved with primal simplex\n",
-      "      95    0.0000000e+00   0.000000e+00   0.000000e+00     45s\n",
+      "      95    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
       "\n",
       "Use crossover to convert LP symmetric solution to basic solution...\n",
       "\n",
       "Root crossover log...\n",
       "\n",
-      "       0 DPushes remaining with DInf 0.0000000e+00                45s\n",
+      "       0 DPushes remaining with DInf 0.0000000e+00                21s\n",
       "\n",
-      "     507 PPushes remaining with PInf 0.0000000e+00                45s\n",
-      "       0 PPushes remaining with PInf 0.0000000e+00                45s\n",
+      "     507 PPushes remaining with PInf 0.0000000e+00                21s\n",
+      "       0 PPushes remaining with PInf 0.0000000e+00                21s\n",
       "\n",
-      "  Push phase complete: Pinf 0.0000000e+00, Dinf 0.0000000e+00     45s\n",
+      "  Push phase complete: Pinf 0.0000000e+00, Dinf 0.0000000e+00     21s\n",
       "\n",
       "\n",
       "Root simplex log...\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "     606    0.0000000e+00   0.000000e+00   0.000000e+00     45s\n",
-      "     606    0.0000000e+00   0.000000e+00   0.000000e+00     45s\n",
+      "     606    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
+      "     606    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
       "\n",
-      "Root relaxation: objective 0.000000e+00, 606 iterations, 0.88 seconds (0.22 work units)\n",
+      "Root relaxation: objective 0.000000e+00, 606 iterations, 0.64 seconds (0.22 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "*    0     0               0       0.0000000    0.00000  0.00%     -   45s\n",
+      "*    0     0               0       0.0000000    0.00000  0.00%     -   21s\n",
       "\n",
-      "Explored 1 nodes (606 simplex iterations) in 45.43 seconds (14.40 work units)\n",
+      "Explored 1 nodes (606 simplex iterations) in 21.56 seconds (14.40 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 0 0.109816 \n",
@@ -103,16 +98,18 @@
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
       "0 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 0 es 26914.92482\n",
+      "La holgura presupuestaria de la solución 0 es 26597.21982\n",
       "1 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 1 es 26914.92482\n",
+      "La holgura presupuestaria de la solución 1 es 26597.21982\n",
       "\n",
       "---------- Manejo Soluciones ----------\n",
       "El valor objetivo es de: 0.0\n",
       "Se compra el camión 1 de tipo diesel\n",
+      "Se compra el camión 2 de tipo diesel\n",
       "Se compra el camión 3 de tipo diesel\n",
       "Se compra el camión 4 de tipo diesel\n",
       "Se compra el camión 5 de tipo diesel\n",
+      "Se compra el camión 6 de tipo diesel\n",
       "Se compra el camión 7 de tipo diesel\n",
       "Se compra el camión 8 de tipo diesel\n",
       "Se compra el camión 9 de tipo eléctrico\n",
@@ -741,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -773,59 +770,31 @@
       "CPU model: Intel(R) Core(TM) i5-8250U CPU @ 1.60GHz, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 1684990 rows, 160336 columns and 3928023 nonzeros\n",
-      "Model fingerprint: 0xc2051842\n",
+      "Optimize a model with 1376750 rows, 160336 columns and 3285783 nonzeros\n",
+      "Model fingerprint: 0xedaae84c\n",
       "Variable types: 0 continuous, 160336 integer (80656 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+06]\n",
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 1603475 rows and 124020 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1613679 rows and 125186 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1613679 rows and 125186 columns (presolve time = 15s) ...\n",
-      "Presolve removed 1613769 rows and 125226 columns\n",
-      "Presolve time: 18.60s\n",
-      "Presolved: 71221 rows, 35110 columns, 272596 nonzeros\n",
-      "Variable types: 0 continuous, 35110 integer (14088 binary)\n",
-      "Found heuristic solution: objective 0.1098160\n",
+      "Presolve removed 1310131 rows and 119316 columns (presolve time = 5s) ...\n",
+      "Presolve removed 1313542 rows and 120570 columns (presolve time = 10s) ...\n",
+      "Presolve removed 1313632 rows and 120610 columns\n",
+      "Presolve time: 14.43s\n",
+      "Presolved: 63118 rows, 39726 columns, 241200 nonzeros\n",
+      "Variable types: 0 continuous, 39726 integer (14064 binary)\n",
+      "Found heuristic solution: objective 0.0000000\n",
       "\n",
-      "Deterministic concurrent LP optimizer: primal and dual simplex (primal and dual model)\n",
-      "Showing first log only...\n",
-      "\n",
-      "Root relaxation presolved: 45305 rows, 22538 columns, 214554 nonzeros\n",
-      "\n",
-      "\n",
-      "Root simplex log...\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    0.0000000e+00   2.648125e+03   6.000437e+09     21s\n",
-      "    3490    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
-      "    3490    0.0000000e+00   0.000000e+00   0.000000e+00     21s\n",
-      "Concurrent spin time: 0.09s\n",
-      "\n",
-      "Solved with primal simplex (primal model)\n",
-      "\n",
-      "Root relaxation: objective 0.000000e+00, 3490 iterations, 1.12 seconds (0.23 work units)\n",
-      "\n",
-      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
-      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
-      "\n",
-      "     0     0    0.00000    0    6    0.10982    0.00000   100%     -   21s\n",
-      "H    0     0                       0.0000000    0.00000  0.00%     -   21s\n",
-      "     0     0    0.00000    0    6    0.00000    0.00000  0.00%     -   21s\n",
-      "\n",
-      "Explored 1 nodes (3490 simplex iterations) in 21.94 seconds (14.85 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 15.61 seconds (11.28 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 2: 0 0.109816 \n",
+      "Solution count 1: 0 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
       "0 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 0 es 46445.41741\n",
-      "1 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 1 es 46445.41741\n",
+      "La holgura presupuestaria de la solución 0 es 45637.21982\n",
       "\n",
       "---------- Manejo Soluciones ----------\n",
       "El valor objetivo es de: 0.0\n",
@@ -835,9 +804,15 @@
       "Se compra el camión 4 de tipo diesel\n",
       "Se compra el camión 5 de tipo diesel\n",
       "Se compra el camión 6 de tipo diesel\n",
+      "Se compra el camión 7 de tipo diesel\n",
       "Se compra el camión 8 de tipo diesel\n",
       "Se compra el camión 9 de tipo eléctrico\n",
       "Se compra el camión 10 de tipo eléctrico\n",
+      "Se compra el camión 11 de tipo eléctrico\n",
+      "Se compra el camión 12 de tipo eléctrico\n",
+      "Se compra el camión 13 de tipo eléctrico\n",
+      "Se compra el camión 14 de tipo eléctrico\n",
+      "Se compra el camión 15 de tipo eléctrico\n",
       "Se compra el camión 16 de tipo eléctrico\n"
      ]
     }
@@ -1266,13 +1241,83 @@
     "print(\"R13 agregada\")\n",
     "\n",
     "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         bigM * Y[i, b - Bo[i, o], t, o] >= W[i, b, t, o]\n",
+    "#         for i in Camiones\n",
+    "#         for o in Origenes\n",
+    "#         for t in Dias\n",
+    "#         for b in range(Bo[i, o] + 1, 48)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14a\",\n",
+    "# )\n",
+    "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Y[i, b - Bo[i, o], t, o] <= W[i, b, t, o]\n",
+    "#         for i in Camiones\n",
+    "#         for o in Origenes\n",
+    "#         for t in Dias\n",
+    "#         for b in range(Bo[i, o] + 1, 48)\n",
+    "#     ),\n",
+    "#     name=\"R14b\",\n",
+    "# )\n",
+    "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         bigM * Z[i, b - Bd[i, d], t, d] >= X[i, b, t, d]\n",
+    "#         for i in Camiones\n",
+    "#         for d in Destinos\n",
+    "#         for t in Dias\n",
+    "#         for b in range(Bd[i, d] + 1, 48)\n",
+    "#     ),\n",
+    "#     name=\"R14c\",\n",
+    "# )\n",
+    "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Z[i, b - Bd[i, d], t, d] <= X[i, b, t, d]\n",
+    "#         for i in Camiones\n",
+    "#         for d in Destinos\n",
+    "#         for t in Dias\n",
+    "#         for b in range(Bd[i, d] + 1, 48)\n",
+    "#     ),\n",
+    "#     name=\"R14d\",\n",
+    "# )\n",
+    "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         W[i, b2, t, o] <= bigM * (1 - Y[i, b1, t, o])\n",
+    "#         for i in Camiones\n",
+    "#         for t in Dias\n",
+    "#         for o in Origenes\n",
+    "#         for b1 in range(1, 48 - 2 * Bo[i, o])\n",
+    "#         for b2 in range(b1, b1 + Bo[i, o])\n",
+    "\n",
+    "#     ),\n",
+    "#     name=\"R14e\"\n",
+    "# )\n",
+    "\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         X[i, b2, t, d] <= bigM * (1 - Z[i, b1, t, d])\n",
+    "#         for i in Camiones\n",
+    "#         for t in Dias\n",
+    "#         for d in Destinos\n",
+    "#         for b1 in range(1, 48 - 2 * Bd[i, d])\n",
+    "#         for b2 in range(b1, b1 + Bd[i, d])\n",
+    "\n",
+    "#     ),\n",
+    "#     name=\"R14f\"\n",
+    "# )\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        bigM * Y[i, b - Bo[i, o], t, o] >= W[i, b, t, o]\n",
+    "        bigM * Y[i, b, t, o] >= W[i, b + Bo[i, o], t, o]\n",
     "        for i in Camiones\n",
     "        for o in Origenes\n",
     "        for t in Dias\n",
-    "        for b in range(Bo[i, o] + 1, 48)\n",
+    "        for b in range(1, 48 - 2*Bo[i, o] + 1)\n",
     "        \n",
     "    ),\n",
     "    name=\"R14a\",\n",
@@ -1280,62 +1325,142 @@
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        Y[i, b - Bo[i, o], t, o] <= W[i, b, t, o]\n",
+    "        bigM * Z[i, b, t, d] >= X[i, b + Bd[i, d], t, d]\n",
     "        for i in Camiones\n",
-    "        for o in Origenes\n",
+    "        for d in Destinos\n",
     "        for t in Dias\n",
-    "        for b in range(Bo[i, o] + 1, 48)\n",
+    "        for b in range(1, 48 - 2*Bd[i, d] + 1)\n",
+    "        \n",
     "    ),\n",
     "    name=\"R14b\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        bigM * Z[i, b - Bd[i, d], t, d] >= X[i, b, t, d]\n",
+    "        Y[i, b, t, o] <= W[i, b + Bo[i, o], t, o]\n",
     "        for i in Camiones\n",
-    "        for d in Destinos\n",
+    "        for o in Origenes\n",
     "        for t in Dias\n",
-    "        for b in range(Bd[i, d] + 1, 48)\n",
+    "        for b in range(1, 48 - 2*Bo[i, o] + 1)\n",
+    "        \n",
     "    ),\n",
     "    name=\"R14c\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        Z[i, b - Bd[i, d], t, d] <= X[i, b, t, d]\n",
+    "        Z[i, b, t, d] <= X[i, b + Bd[i, d], t, d]\n",
     "        for i in Camiones\n",
     "        for d in Destinos\n",
     "        for t in Dias\n",
-    "        for b in range(Bd[i, d] + 1, 48)\n",
+    "        for b in range(1, 48 - 2*Bd[i, d] + 1)\n",
+    "        \n",
     "    ),\n",
     "    name=\"R14d\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        W[i, b2, t, o] <= bigM * (1 - Y[i, b1, t, o])\n",
+    "        Y[i, b, t, o] == 0\n",
     "        for i in Camiones\n",
-    "        for t in Dias\n",
     "        for o in Origenes\n",
-    "        for b1 in range(1, 48 - 2 * Bo[i, o])\n",
-    "        for b2 in range(b1, b1 + Bo[i, o])\n",
-    "\n",
+    "        for t in Dias\n",
+    "        for b in range(48 - 2*Bo[i, o] + 1, 49)\n",
+    "        \n",
     "    ),\n",
-    "    name=\"R14e\"\n",
+    "    name=\"R14e\",\n",
     ")\n",
     "\n",
     "model.addConstrs(\n",
     "    (\n",
-    "        X[i, b2, t, d] <= bigM * (1 - Z[i, b1, t, d])\n",
+    "        Z[i, b, t, d] == 0\n",
     "        for i in Camiones\n",
-    "        for t in Dias\n",
     "        for d in Destinos\n",
-    "        for b1 in range(1, 48 - 2 * Bd[i, d])\n",
-    "        for b2 in range(b1, b1 + Bd[i, d])\n",
-    "\n",
+    "        for t in Dias\n",
+    "        for b in range(48 - 2*Bd[i, d] + 1, 49)\n",
+    "        \n",
     "    ),\n",
-    "    name=\"R14f\"\n",
+    "    name=\"R14f\",\n",
     ")\n",
+    "\n",
+    "# indices_bloques_r14g = lambda i, o: list(range(1, Bo[i,o] + 1)) + list(range(48 - Bo[i,o] + 1, 49))\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         W[i, b, t, o] == 0\n",
+    "#         for i in Camiones\n",
+    "#         for o in Origenes\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14g(i, o)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14g\",\n",
+    "# )\n",
+    "\n",
+    "# indices_bloques_r14h = lambda i, d: list(range(1, Bd[i,d] + 1)) + list(range(48 - Bd[i,d] + 1, 49))\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         X[i, b, t, d] == 0\n",
+    "#         for i in Camiones\n",
+    "#         for d in Destinos\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14h(i, d)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14h\",\n",
+    "# )\n",
+    "\n",
+    "# indices_bloques_r14i = lambda i, t, o: [ b for b in range(Bo[i, o] + 1, 48 - Bo[i,o] + 1) if W[i,b,t,o] > 0]\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Y[i, b - Bo[i,o], t, o] == 1\n",
+    "#         for i in Camiones\n",
+    "#         for o in Origenes\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14i(i, t, o)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14i\",\n",
+    "# )\n",
+    "\n",
+    "# indices_bloques_r14j = lambda i, t, d: [ b for b in range(Bd[i, d] + 1, 48 - Bd[i,d] + 1) if X[i,b,t,d] > 0]\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Z[i, b - Bd[i,d], t, d] == 1\n",
+    "#         for i in Camiones\n",
+    "#         for d in Destinos\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14j(i, t, d)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14j\",\n",
+    "# )\n",
+    "\n",
+    "# indices_bloques_r14k = lambda i, t, o: [ b for b in range(Bo[i, o] + 1, 48 - Bo[i,o] + 1) if W[i,b,t,o] == 0]\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Y[i, b - Bo[i,o], t, o] == 0\n",
+    "#         for i in Camiones\n",
+    "#         for o in Origenes\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14k(i, t, o)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14k\",\n",
+    "# )\n",
+    "\n",
+    "# indices_bloques_r14l = lambda i, t, d: [ b for b in range(Bd[i, d] + 1, 48 - Bd[i,d] + 1) if X[i,b,t,d] == 0]\n",
+    "# model.addConstrs(\n",
+    "#     (\n",
+    "#         Z[i, b - Bd[i,d], t, d] == 0\n",
+    "#         for i in Camiones\n",
+    "#         for d in Destinos\n",
+    "#         for t in Dias\n",
+    "#         for b in indices_bloques_r14l(i, t, d)\n",
+    "        \n",
+    "#     ),\n",
+    "#     name=\"R14l\",\n",
+    "# )\n",
+    "\n",
     "\n",
     "\n",
     "print(\"R14 agregada\")\n",
